--- a/src/css/pages/visualizacion.scss
+++ b/src/css/pages/visualizacion.scss
@@ -105,7 +105,7 @@
 			margin-top: 68px;
 			height: 100% !important;
 			.resizable-g{
-				transform: translate(25%,10%) scale(.5) !important;
+				transform: translate(25%,10%) scale(.6) !important;
 			}
 		}
 	}
